{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 76,
  "lineage": "404b8c13-6298-ca25-cdc4-e8e1876efb6c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:153294646920:loadbalancer/app/tf-backend-blue-lb/5513aa01153c2019",
            "arn_suffix": "app/tf-backend-blue-lb/5513aa01153c2019",
            "dns_name": "tf-backend-blue-lb-1394035521.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:153294646920:loadbalancer/app/tf-backend-blue-lb/5513aa01153c2019",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-backend-blue-lb",
            "security_groups": [
              "sg-02227f96c3741d523"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0da53b3c"
              },
              {
                "subnet_id": "subnet-45e9b864"
              },
              {
                "subnet_id": "subnet-52266c34"
              },
              {
                "subnet_id": "subnet-536b711e"
              },
              {
                "subnet_id": "subnet-7b5d0a24"
              },
              {
                "subnet_id": "subnet-d7a7aad9"
              }
            ],
            "subnets": [
              "subnet-0da53b3c",
              "subnet-45e9b864",
              "subnet-52266c34",
              "subnet-536b711e",
              "subnet-7b5d0a24",
              "subnet-d7a7aad9"
            ],
            "vpc_id": "vpc-0b523576",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_security_groups.this",
            "data.aws_subnet_ids.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:153294646920:loadbalancer/app/tf-frontend-blue-lb/5dc5f47d4ff92b54",
            "arn_suffix": "app/tf-frontend-blue-lb/5dc5f47d4ff92b54",
            "dns_name": "tf-frontend-blue-lb-2049499551.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:153294646920:loadbalancer/app/tf-frontend-blue-lb/5dc5f47d4ff92b54",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-frontend-blue-lb",
            "security_groups": [
              "sg-02227f96c3741d523"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0da53b3c"
              },
              {
                "subnet_id": "subnet-45e9b864"
              },
              {
                "subnet_id": "subnet-52266c34"
              },
              {
                "subnet_id": "subnet-536b711e"
              },
              {
                "subnet_id": "subnet-7b5d0a24"
              },
              {
                "subnet_id": "subnet-d7a7aad9"
              }
            ],
            "subnets": [
              "subnet-0da53b3c",
              "subnet-45e9b864",
              "subnet-52266c34",
              "subnet-536b711e",
              "subnet-7b5d0a24",
              "subnet-d7a7aad9"
            ],
            "vpc_id": "vpc-0b523576",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_security_groups.this",
            "data.aws_subnet_ids.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:153294646920:listener/app/tf-backend-blue-lb/5513aa01153c2019/264c53acb7514227",
            "certificate_arn": "arn:aws:acm:us-east-1:153294646920:certificate/6aaf8f4d-4583-4661-a147-0549859c4cea",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:153294646920:targetgroup/tf-backend-blue-tg/ce90588d379165b5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:153294646920:listener/app/tf-backend-blue-lb/5513aa01153c2019/264c53acb7514227",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:153294646920:loadbalancer/app/tf-backend-blue-lb/5513aa01153c2019",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.backend",
            "aws_alb_target_group.btg",
            "data.aws_security_groups.this",
            "data.aws_subnet_ids.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:153294646920:listener/app/tf-frontend-blue-lb/5dc5f47d4ff92b54/a4a347e13419e47f",
            "certificate_arn": "arn:aws:acm:us-east-1:153294646920:certificate/aa402ae9-bfe1-4aa3-a15e-98bfe27df52d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:153294646920:targetgroup/tf-frontend-blue-tg/7fa0b76381ffc8e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:153294646920:listener/app/tf-frontend-blue-lb/5dc5f47d4ff92b54/a4a347e13419e47f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:153294646920:loadbalancer/app/tf-frontend-blue-lb/5dc5f47d4ff92b54",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.frontend",
            "aws_alb_target_group.tg",
            "data.aws_security_groups.this",
            "data.aws_subnet_ids.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "btg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:153294646920:targetgroup/tf-backend-blue-tg/ce90588d379165b5",
            "arn_suffix": "targetgroup/tf-backend-blue-tg/ce90588d379165b5",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:153294646920:targetgroup/tf-backend-blue-tg/ce90588d379165b5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-backend-blue-tg",
            "port": 8400,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b523576"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:153294646920:targetgroup/tf-frontend-blue-tg/7fa0b76381ffc8e6",
            "arn_suffix": "targetgroup/tf-frontend-blue-tg/7fa0b76381ffc8e6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:153294646920:targetgroup/tf-frontend-blue-tg/7fa0b76381ffc8e6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-frontend-blue-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b523576"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:153294646920:listener/app/tf-frontend-blue-lb/5dc5f47d4ff92b54/e128196a36ed211c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:153294646920:listener/app/tf-frontend-blue-lb/5dc5f47d4ff92b54/e128196a36ed211c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:153294646920:loadbalancer/app/tf-frontend-blue-lb/5dc5f47d4ff92b54",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.frontend",
            "data.aws_security_groups.this",
            "data.aws_subnet_ids.this"
          ]
        }
      ]
    }
  ]
}